--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,3 +24,8 @@ jobs:
       run: dotnet build --no-restore
     - name: rund
       run: dotnet run
+    - name: Upload artifact for deployment job
+      uses: actions/upload-artifact@v3
+      with:
+          name: .net-app
+          path: ${{env.DOTNET_ROOT}}/output
